This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

08-Oct-2005  (Lars Duening)
  - (closure.c) When freeing bound unbound_lambdas, the code forgot to
       remove the reference to the creator object of the unbound_lambda.
  - (closure.c) Efun symbol_function() leaked an object reference (Bug
       #0000412).
  - (closure.c, object.h) Made the object reference logs a bit more
       expressive.

31-Oct-2005 (Philipp Hancke)
  - (pkg-tls.c) When accepting a SSL connection, request a client
       certificate. The driver itself won't check the correctness,
       but the result will be available in the connection status.

30-Oct-2005 (Lars Duening)  (3.3.711)
  - Created snapshot.

29-Oct-2005 (Lars Duening)
  - (backend.c) The backend call to cleanup_all_objects() is now
       controlled with a low/high watermark logic, to prevent
       repeated calls in consecutive backend cycles: if one cleanup
       didn't remove enough destructed objects, it is unlikely
       that immediately following ones will.
  - (pkg-tls.c) The OpenSSL read/writes are now retried when necessary.
  - (configure) When searching for the mysqlclient library in the
       usual places, the configure script forgot to clear out the 
       cache flag.
  - (smalloc.c) Removed a compilation error when SBRK_OK wasn't defined.
  - (mstrings, many files) The find-in-table statistics were done
       incompletely.
  - (structs.c) The test for struct equivalence now recurses through
       member structs; otherwise changes in an contained struct wouldn't
       be reflected in the containing struct.
  - (prolang.y) Clarified the 'Unknown type' error messages when
       derefencing structs.

19-Oct-2005 (Lars Duening)
  - (pkg-tls.c) tls_check_certificate() now returns the low-level API
      values, and throws an error if the connection is not secure.

11-Oct-2005 (Lars Duening)