@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+09-Oct-2005  (Lars Duening)
+  - (closure.c) replace_program_lambda_adjust() forgot to clear the
+       object references from the auxiliary lambda it created (Bug #0000412).
+
 08-Oct-2005  (Lars Duening)
   - (closure.c) When freeing bound unbound_lambdas, the code forgot to
        remove the reference to the creator object of the unbound_lambda.
